--- a/RECredentials/pom.xml
+++ b/RECredentials/pom.xml
@@ -5,23 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.cs4530.team6</groupId>
-    <artifactId>REDataLoader</artifactId>
+    <artifactId>RECredentials</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
+
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-csv</artifactId>
-            <version>1.12.0</version>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>42.7.2</version>
-        </dependency>
-
     </dependencies>
-
 
 </project>
