--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>RECredentials</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
