--- a/REServer/pom.xml
+++ b/REServer/pom.xml
@@ -5,8 +5,8 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <openapi.version>6.0.0-SNAPSHOT</openapi.version>
     </properties>
@@ -27,6 +27,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>RECredentials</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
 
