--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -8,6 +8,11 @@
     <artifactId>REDataLoader</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <maven.compiler.source>24</maven.compiler.source>
+        <maven.compiler.target>24</maven.compiler.target>
+    </properties>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
         <dependency>
