--- a/REServer/pom.xml
+++ b/REServer/pom.xml
@@ -8,15 +8,8 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <openapi.version>6.0.0-SNAPSHOT</openapi.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>io.javalin</groupId>
-            <artifactId>javalin-bundle</artifactId>
-            <version>6.5.0</version>
-        </dependency>
-
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -34,15 +27,50 @@
             <artifactId>RECredentials</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-
+        <dependency>
+         <groupId>io.javalin</groupId>
+         <artifactId>javalin-bundle</artifactId>
+         <version>6.7.0</version>
+     </dependency>
+     <dependency>
+         <groupId>io.javalin.community.openapi</groupId>
+         <artifactId>javalin-openapi-plugin</artifactId>
+         <version>6.7.0</version>
+     </dependency>
+     <dependency>
+         <groupId>io.javalin.community.openapi</groupId>
+         <artifactId>javalin-swagger-plugin</artifactId>
+         <version>6.7.0</version>
+     </dependency>
+     <dependency>
+         <groupId>io.javalin.community.openapi</groupId>
+         <artifactId>javalin-redoc-plugin</artifactId>
+         <version>6.7.0</version>
+     </dependency>
     </dependencies>
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                    <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                            <groupId>io.javalin.community.openapi</groupId>
+                            <artifactId>openapi-annotation-processor</artifactId>
+                            <version>6.7.0</version>
+                        </annotationProcessorPath>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
+            <plugin> 
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.7.1</version>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -63,14 +91,9 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-
-                </configuration>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.10.0.2594</version>
             </plugin>
         </plugins>
     </build>
