--- a/REServer/pom.xml
+++ b/REServer/pom.xml
@@ -78,6 +78,12 @@
          <artifactId>javalin-redoc-plugin</artifactId>
          <version>6.7.0</version>
      </dependency>
+     
+     <dependency>
+         <groupId>redis.clients</groupId>
+         <artifactId>jedis</artifactId>
+         <version>5.1.0</version>
+     </dependency>
       
     </dependencies>
     <build>
