--- a/REDisDB/docker-compose.yml
+++ b/REDisDB/docker-compose.yml
@@ -1,14 +1,18 @@
-version: '3.8'
-
 services:
   redis:
-    image: redis:7.2-alpine
+    image: redis/redis-stack-server:latest
     container_name: redis
     ports:
       - "6379:6379"
     volumes:
       - redis-data:/data
-    command: ["redis-server", "--appendonly", "yes"]
+
+  initdb:
+    build: ./initdb
+    depends_on:
+      - redis
+    entrypoint: ["sh", "-c", "sleep 2 && python init_data.py"]
+    restart: "no"  # Runs only once
 
   redisinsight:
     image: redislabs/redisinsight:1.14.0
