--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -30,7 +30,6 @@
             <artifactId>RECredentials</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
@@ -40,8 +39,15 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version> <!-- Use latest stable -->
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
             <version>2.17.1</version>
         </dependency>
+
+
     </dependencies>
 
     <build>
