--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -25,9 +25,22 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.0</version> <!-- or latest version -->
+        </dependency>
+
         <dependency>
             <groupId>org.cs4530.team6</groupId>
             <artifactId>RECredentials</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>REServer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
