feat: abstraction a bunch

--- a/REServer/pom.xml
+++ b/REServer/pom.xml
@@ -59,25 +59,35 @@
         </dependency>
 
         <dependency>
-         <groupId>io.javalin</groupId>
-         <artifactId>javalin-bundle</artifactId>
-         <version>6.7.0</version>
-     </dependency>
-     <dependency>
-         <groupId>io.javalin.community.openapi</groupId>
-         <artifactId>javalin-openapi-plugin</artifactId>
-         <version>6.7.0</version>
-     </dependency>
-     <dependency>
-         <groupId>io.javalin.community.openapi</groupId>
-         <artifactId>javalin-swagger-plugin</artifactId>
-         <version>6.7.0</version>
-     </dependency>
-     <dependency>
-         <groupId>io.javalin.community.openapi</groupId>
-         <artifactId>javalin-redoc-plugin</artifactId>
-         <version>6.7.0</version>
-     </dependency>
+            <groupId>io.javalin</groupId>
+            <artifactId>javalin-bundle</artifactId>
+            <version>6.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.javalin.community.openapi</groupId>
+            <artifactId>javalin-openapi-plugin</artifactId>
+            <version>6.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.javalin.community.openapi</groupId>
+            <artifactId>javalin-swagger-plugin</artifactId>
+            <version>6.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.javalin.community.openapi</groupId>
+            <artifactId>javalin-redoc-plugin</artifactId>
+            <version>6.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>RESQLClasses</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>RESales</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
       
     </dependencies>
     <build>
