--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>org.cs4530.team6</groupId>
-            <artifactId>REServer</artifactId>
+            <artifactId>RESales</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
