--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -44,6 +44,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>RESQLClasses</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
