--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -13,6 +13,12 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <parent>
+        <groupId>org.cs4530.team6</groupId>
+        <artifactId>REProject</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
         <dependency>
