--- a/REServer/pom.xml
+++ b/REServer/pom.xml
@@ -9,6 +9,13 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <parent>
+        <groupId>org.cs4530.team6</groupId>
+        <artifactId>REProject</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
