--- a/resales/pom.xml
+++ b/resales/pom.xml
@@ -9,6 +9,12 @@
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
+    <parent>
+        <groupId>org.cs4530.team6</groupId>
+        <artifactId>REProject</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -30,12 +36,6 @@
         <dependency>
             <groupId>org.cs4530.team6</groupId>
             <artifactId>RECredentials</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.cs4530.team6</groupId>
-            <artifactId>REServer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
