--- a/REDataLoader/pom.xml
+++ b/REDataLoader/pom.xml
@@ -13,6 +13,12 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <parent>
+        <groupId>org.cs4530.team6</groupId>
+        <artifactId>REProject</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
         <dependency>
@@ -25,9 +31,28 @@
             <artifactId>postgresql</artifactId>
             <version>42.7.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.0</version> <!-- or latest version -->
+        </dependency>
+
         <dependency>
             <groupId>org.cs4530.team6</groupId>
             <artifactId>RECredentials</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>RESales</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>RESQLClasses</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
