--- a/RESQLClasses/pom.xml
+++ b/RESQLClasses/pom.xml
@@ -1,14 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>org.cs4530.team6</groupId>
-    <artifactId>REServer</artifactId>
+    <artifactId>RESQLClasses</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
 
     <parent>
         <groupId>org.cs4530.team6</groupId>
@@ -16,6 +14,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -84,16 +86,6 @@
             <groupId>io.javalin.community.openapi</groupId>
             <artifactId>javalin-redoc-plugin</artifactId>
             <version>6.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cs4530.team6</groupId>
-            <artifactId>RESQLClasses</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>org.cs4530.team6</groupId>
-            <artifactId>RESales</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
       
     </dependencies>
@@ -166,4 +158,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
