--- a/remetrics/pom.xml
+++ b/remetrics/pom.xml
@@ -94,6 +94,18 @@
             <artifactId>RESQLClasses</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Kafka Dependencies -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-streams</artifactId>
+            <version>3.6.1</version>
+        </dependency>
       
     </dependencies>
     <build>
