--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>REKafka</module>
         <module>RECredentials</module>
         <module>RESQLClasses</module>
         <module>RESales</module>
