--- a/resales/pom.xml
+++ b/resales/pom.xml
@@ -94,7 +94,12 @@
             <artifactId>RESQLClasses</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-      
+        <dependency>
+            <groupId>org.cs4530.team6</groupId>
+            <artifactId>REKafka</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
